<resources>
    <string name="app_name">Consult a Doctor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="log_in">Log In</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <string name="already_have_account_login">Already have an account? Login here!!</string>
    <string name="full_name">Full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="qualification">Qualification</string>
    <string name="enter_your_experience">Enter Your Experience</string>>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="specialization">Specialization</string>
    <string name="degree">Degree</string>
    <string name="experience">Experience</string>
    <string name="log_out">Log Out</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="pay_to_the_doctor">Pay to the Doctor</string>
    <string name="abc123_upi_id">email@bank</string>
    <string name="note">Note</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="api_key">AIzaSyCJiiloQ6Pc-Nyt7C36jmxkzQARQdUiMRI</string>
    <string name="get_clinic_distance">Get Clinic Distance</string>
    <string name="chat">Chat With Doctor</string>
    <string name="chat_patient">Chat with Patient</string>
    <string name="ask_for_fee">Ask For Fee</string>
    <string name="call_doctor">Call Doctor</string>


</resources>
