<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="2dp"
    android:elevation="2dp"
    android:background="@color/colorBlack"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarIv"
            android:src="@drawable/img_doct"
            android:layout_width="110dp"
            android:layout_height="110dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name"
                android:padding="4dp"
                android:textSize="22sp"
                android:textColor="@color/colorWhite"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layoutDegree"
                >
                <TextView
                    android:id="@+id/txtDoctorSpecialization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Heart Specialist"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_margin="2dp"
                    android:layout_height="match_parent"
                    android:background="#000"
                    />

                <TextView
                    android:id="@+id/txtDoctorDegree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="M.B.B.S. M.D."
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    />

            </LinearLayout>
            <TextView
                android:id="@+id/txtDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.5 KM From Here"
                android:padding="4dp"
                android:textSize="12sp"
                android:visibility="gone"
                android:textColor="@color/colorWhite"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:id="@+id/txtGetClinicDistance"
                    android:text="@string/get_clinic_distance"
                    android:background="@drawable/btn_shape"
                    android:padding="4dp"
                    android:textColor="#00f"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:id="@+id/txtChat"
                    android:text="@string/chat"
                    android:background="@drawable/btn_shape"
                    android:padding="4dp"
                    android:layout_marginStart="3dp"
                    android:textColor="#00f"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>