<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_doc_main"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="178dp"
                android:layout_height="119dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:baselineAlignBottom="true"
                android:src="@drawable/img_doctorhelloo"
                app:civ_border_width="3dp" />

        <!-- Input for Full Name-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:helperTextEnabled="true"
                app:helperText="Enter Your Full Name"
                app:helperTextTextColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_FullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

        <!-- Input for Email-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:helperTextEnabled="true"
                app:helperText="Enter Your Email"
                app:helperTextTextColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

        <!-- Input for Mobile-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                app:helperTextEnabled="true"
                app:helperText="Enter Your Mobile Number"
                app:helperTextTextColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>


        <!-- Input for Password-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:helperTextEnabled="true"
                app:helperText="Enter Your Password"
                app:helperTextTextColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimaryDark"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Input for Confirm Password-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:helperTextEnabled="true"
                app:helperText="Confirm Your Password"
                app:helperTextTextColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimaryDark"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_conPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Input for Qualification-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qualification"
                app:helperTextEnabled="true"
                app:helperText="Enter Your Qualification"
                app:helperTextTextColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                app:hintTextAppearance="?attr/textAppearanceSearchResultTitle"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EtDoctorQualification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="4"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Input for Experience-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_experience"
                app:helperTextEnabled="true"
                app:helperText="Enter Your Experience"
                app:helperTextTextColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                app:hintTextAppearance="?attr/textAppearanceSearchResultTitle"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EtDoctorExperience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp"
                   />

            </com.google.android.material.textfield.TextInputLayout>



            <!-- Input for Qualification-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/specialization"
                app:helperTextEnabled="true"
                app:helperText="Enter Your Specialization"
                app:helperTextTextColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                app:hintTextAppearance="?attr/textAppearanceSearchResultTitle"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EtSpecialization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="4"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>



           <!-- <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeDoctorRegister"
                app:errorTextAppearance="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:helperTextEnabled="true"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                android:clickable="true"
                app:boxBackgroundMode="outline"
                android:outlineProvider="bounds"
                android:focusable="true"
                android:focusedByDefault="true"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TxtAddress"
                    android:editable="false"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>-->

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Allow Location"
                android:textColor="@color/colorBlack"
                android:padding="10dp"
                android:id="@+id/TxtAddress"
                android:textSize="20sp"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_Register"
                    android:layout_width="224dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_shape"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="#D2FF07"
                    android:textSize="30sp" />



                <TextView
                    android:id="@+id/have_accountTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/already_have_account_login"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="16sp" />



        </LinearLayout>

    </ScrollView>

</LinearLayout>